--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-is": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
