--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-image-zooom": "^1.1.0",
     "react-is": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.8.2",
