--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-image-zooom": "^1.1.0",
     "react-is": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
